<resources>
    <string name="app_name">Praktisi Mengajar Pert2</string>

    <!-- Menu Activity -->
    <string name="main_cta_screen_touch">Screen Touch</string>
    <string name="main_cta_activity_lifecycle">Activity Lifecycle</string>
    <string name="main_cta_activity_fragment_transaction_and_lifecycle"><![CDATA[Fragment Lifecycle & Transaction]]></string>
    <string name="main_cta_orientation">Screen Orientation</string>
    <string name="main_cta_bundle">Bundle Orientation State</string>

    <!-- Touch -->
    <string name="touch_text_count">Count: %s</string>

    <!-- Activity Lifecycle -->
    <string name="lifecycle_1_title">Activity Lifecycle Sample - 1</string>
    <string name="lifecycle_2_title">Activity Lifecycle Sample - 2</string>
    <string name="lifecycle_1_activity_name">Activity 1</string>
    <string name="lifecycle_2_activity_name">Acitivity 2</string>
    <string name="lifecycle_1_cta">Open Second Activity</string>

    <!-- Fragment -->
    <string name="frg_main_title">Fragment Sample</string>
    <string name="frg_main_profile_title">Fragment Sample - Profile</string>
    <string name="frg_category_desc">This is fragment Category</string>
    <string name="frg_category_lifestyle">Open fragment Lifestyle</string>
    <string name="frg_category_name">Category Name</string>
    <string name="frg_category_description">Category Description</string>
    <string name="frg_to_profile">Go To Profile Activity</string>
    <string name="frg_show_dialog">Show a Dialog</string>
    <string name="frg_hello_home_fragment">Hello this is Home Fragment</string>
    <string name="frg_to_category">Open fragment Category</string>
    <string name="frg_question_coach">Who is the worst Manchester United head coach?</string>
    <string name="frg_item_ole">Ole Gunnar Solskjaer</string>
    <string name="frg_jose_mourinho">Jose Mourinho</string>
    <string name="frg_louis_van_gaal">Louis Van Gaal</string>
    <string name="frg_david_moyes">David Moyes</string>
    <string name="frg_choose">Select</string>
    <string name="frg_close">Close</string>
    <string name="main_cta_configuration">Configuration Orientation</string>
    <string name="main_cta_specific_layout">Specific Layout</string>
    <string name="main_cta_mvp">MVP Pattern</string>
</resources>