<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/general_padding">

        <Button
            android:id="@+id/btn_lifecycle_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_padding"
            android:text="@string/main_cta_activity_lifecycle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_fragment_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_padding"
            android:text="@string/main_cta_activity_fragment_transaction_and_lifecycle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_touch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_padding"
            android:text="@string/main_cta_screen_touch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_fragment_activity" />

        <Button
            android:id="@+id/btn_orientation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_padding"
            android:text="@string/main_cta_orientation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_touch" />

        <Button
            android:id="@+id/btn_bundle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_padding"
            android:text="@string/main_cta_bundle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_orientation" />

        <Button
            android:id="@+id/btn_configuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_padding"
            android:text="@string/main_cta_configuration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_bundle" />

        <Button
            android:id="@+id/btn_specific_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_padding"
            android:text="@string/main_cta_specific_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_configuration" />

        <Button
            android:id="@+id/btn_mvp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_padding"
            android:text="@string/main_cta_mvp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_specific_layout" />

    </LinearLayout>

</ScrollView>